admin blog, cilent blog pages

--- a/public/css/last-changes.css
+++ b/public/css/last-changes.css
@@ -1,438 +1,1 @@
-* {
-  font-family: Metropolis, sans-serif;
-}
-
-/* start header menu */
-header .logo {
-  margin-right: 20% !important;
-}
-header nav .black_menu .nav-item .nav-link.active {
-  border-bottom: 2px solid #F54838;
-}
-header#header_white .nav-item .nav-link.active {
-  border-bottom: 2px solid #F54838;
-}
-
-/* end header menu */
-/* start sign up */
-.sign-up .basic-form .custom-radios input[type=radio]#lawyer, .sign-up .basic-form .custom-radios input[type=radio]#lawyer {
-  display: none;
-}
-
-/*end sign up*/
-/*start Home*/
-/* home form */
-.pos-r {
-  position: relative;
-  top: 32px;
-}
-
-.home-search-form {
-  border-radius: 3px;
-  display: flex;
-  justify-content: space-between;
-}
-.home-search-form .btn-group:nth-child(1) {
-  width: 90%;
-}
-.home-search-form .btn-group:nth-child(2) {
-  width: 10%;
-}
-.home-search-form .home-search-select-item {
-  background: #FFFFFF;
-  box-shadow: 0 0 2px rgba(0, 0, 0, 0.2);
-  border: 1px solid #ccc;
-  border-radius: 0;
-  padding: 10.5px 16px 0;
-  width: 33.33333333%;
-}
-.home-search-form .home-search-select-item .home-search-select-title {
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 14px;
-  color: #97959D;
-  text-align: start;
-}
-.home-search-form .home-search-select-item .dropdown-toggle, .home-search-form .home-search-select-item select {
-  font-weight: 500;
-  font-size: 15px;
-  color: #000000;
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0;
-  padding-top: 5px;
-  border: none;
-}
-.home-search-form .home-search-select-item .dropdown-toggle:focus, .home-search-form .home-search-select-item select:focus {
-  box-shadow: none;
-}
-.home-search-form .home-search-select-item .dropdown-menu {
-  margin-left: -16px;
-}
-.home-search-form .home-search-select-item .dropdown-menu.show {
-  width: 33.1%;
-}
-.home-search-form .home-search-select-item .dropdown-menu .dropdown-items-wrap {
-  display: flex;
-  flex-direction: column;
-}
-.home-search-form .home-search-select-item .dropdown-menu .dropdown-items-wrap a {
-  color: #000000;
-}
-.home-search-form .home-search-search-btn {
-  background-color: #f54838;
-  padding: 20px 30px;
-  border: transparent;
-  color: #fff;
-  border-top-right-radius: 3px;
-  border-bottom-right-radius: 3px;
-  font-weight: bold;
-}
-
-.legal-work {
-  padding: 65px 10px 110px 84px;
-}
-.legal-work .legal-work-content .legal-work-title {
-  font-family: Metropolis, sans-serif;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 42px;
-  text-transform: capitalize;
-  color: #241F2D;
-  padding-top: 8px;
-}
-.legal-work .legal-work-content .legal-work-text {
-  padding-top: 55px;
-}
-.legal-work .legal-work-content .legal-work-text .legal-work-text-item {
-  padding-top: 29px;
-  font-family: Metropolis, sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 22px;
-  color: #000;
-}
-.legal-work .legal-work-content .legal-work-text .legal-work-text-item img {
-  width: 30px;
-  height: 30px;
-  margin-right: 13px;
-}
-.legal-work .legal-work-content .legal-work-btn {
-  display: flex;
-  flex-direction: column;
-  padding: 12px 20px;
-  width: 180px;
-  height: 44px;
-  background: #F54838;
-  border-radius: 4px;
-  text-decoration: none;
-  font-family: Metropolis, sans-serif;
-  font-style: normal;
-  font-weight: 600;
-  font-size: 15px;
-  color: #FFFFFF;
-  margin: 0;
-  margin-top: 80px;
-}
-
-.legal-work-img-wrap {
-  position: relative;
-}
-.legal-work-img-wrap .image-wrap {
-  position: absolute;
-}
-.legal-work-img-wrap .image-wrap .legal-work-img {
-  width: 100%;
-}
-
-.translators_container_block_row:nth-child(1) .translators_block_rows:nth-child(1) {
-  border-top-left-radius: 4px;
-}
-.translators_container_block_row:nth-child(1) .translators_block_rows:nth-child(4) {
-  border-top-right-radius: 4px;
-}
-.translators_container_block_row:nth-child(2) .translators_block_rows:nth-child(1) {
-  border-bottom-left-radius: 4px;
-}
-.translators_container_block_row:nth-child(2) .translators_block_rows:nth-child(4) {
-  border-top-right-radius: 4px;
-}
-
-#translators_container_block {
-  padding-top: 0 !important;
-  margin-top: 40px !important;
-}
-
-#help_container {
-  padding: 124px 0 60px 96px;
-  margin-bottom: 100px;
-  max-width: 80%;
-}
-#help_container .help_left {
-  padding-right: 30px;
-}
-#help_container .help_left .help_text_container p:nth-child(2) {
-  max-width: 60%;
-}
-#help_container img.img-fluid {
-  align-self: center;
-  margin-right: -15%;
-  margin-top: -55px;
-  max-width: 100%;
-}
-
-/*end Home*/
-/*start About*/
-#header_background.about-header-bg {
-  width: 100%;
-  background: url(../img/about-bg-t.png) no-repeat top;
-  background-size: cover;
-}
-#header_background.about-header-bg .about-header-icon {
-  margin-top: 153px;
-  margin-bottom: 15px;
-}
-#header_background.about-header-bg .hedding_text_container h1 {
-  padding-top: 0;
-}
-#header_background.about-header-bg .hedding_text_container h3 {
-  padding-top: 20px;
-}
-
-.bg-color-t {
-  background: linear-gradient(180deg, #F3F6FB 0%, #FFFFFF 100%) !important;
-}
-
-.goals-content .goals-bg .abs {
-  position: absolute;
-  top: -140px;
-  left: -262px;
-  bottom: 0;
-  width: 178%;
-}
-.goals-content .goals-bg .abs img {
-  width: 100%;
-}
-.goals-content .goals-bg .goals-block {
-  padding: 120px 50px 122px;
-}
-.goals-content .goals-bg .goals-block .goals-block-item .goals-block-text ul li {
-  list-style-type: disc;
-}
-/*end About*/
-/*start Profile page*/
-.per-hour-border {
-  border: 1px solid #ced4da;
-  border-top-left-radius: 4px;
-  border-bottom-left-radius: 4px;
-}
-.per-hour-border option {
-  font-size: 14px !important;
-}
-.per-hour-border .btn {
-  color: #241F2D;
-  font-size: 14px;
-  vertical-align: middle;
-}
-
-.languages-select div, .languages-select select, .languages-select option {
-  color: #241F2D;
-  font-size: 14px;
-  vertical-align: middle;
-}
-.languages-select select {
-  padding: 8px 12px;
-}
-
-/*end Profile page*/
-/*start How It Works page*/
-.how-it-works-top .how-it-works-head .how-it-works-tabs ul.nav-tabs {
-  border-bottom: none;
-}
-.how-it-works-top .how-it-works-head .how-it-works-tabs ul li:nth-child(1) {
-  border-radius: 4px 0 0 4px;
-}
-.how-it-works-top .how-it-works-head .how-it-works-tabs ul li:nth-child(1) a.tab-button {
-  border-radius: 4px 0 0 4px;
-}
-.how-it-works-top .how-it-works-head .how-it-works-tabs ul li:nth-child(2) {
-  border-radius: 0 4px 4px 0;
-  border-color: blueviolet !important;
-}
-.how-it-works-top .how-it-works-head .how-it-works-tabs ul li:nth-child(2) a.tab-button {
-  border-radius: 0 4px 4px 0;
-}
-.how-it-works-top .tab-body .bg-5 {
-  background-image: url("../img/5.svg");
-  background-repeat: no-repeat;
-  margin-top: 200px;
-}
-
-/*end How It Works page*/
-@media only screen and (max-width: 1284px) {
-  .goals-content .goals-bg .abs {
-    width: 188%;
-  }
-}
-@media only screen and (max-width: 1200px) {
-  #help_container img.img-fluid {
-    max-width: 60%;
-  }
-
-  .goals-content .goals-bg .abs {
-    width: 192%;
-  }
-}
-@media only screen and (max-width: 1120px) {
-  header .logo {
-    margin-right: 15% !important;
-  }
-
-  .goals-content .goals-bg .abs {
-    width: 202%;
-  }
-}
-@media only screen and (max-width: 1056px) {
-  header .logo {
-    margin-right: 9% !important;
-  }
-}
-@media only screen and (max-width: 993px) {
-  header .logo {
-    margin-right: 9% !important;
-  }
-  header #header_white .nav-item .nav-link.active {
-    width: 130px;
-  }
-
-  #help_container img.img-fluid {
-    max-width: 55%;
-  }
-
-  .goals-content .goals-bg .abs {
-    display: none;
-  }
-
-  .sm-center {
-    margin: auto;
-  }
-
-  .home-search-form {
-    flex-wrap: wrap;
-    flex-direction: column;
-    justify-content: center;
-  }
-  .home-search-form .btn-group:nth-child(1) {
-    width: 90%;
-    display: flex;
-    flex-direction: column;
-    margin: auto;
-  }
-  .home-search-form .btn-group:nth-child(1) .home-search-select-item {
-    width: 100%;
-  }
-  .home-search-form .btn-group:nth-child(2) {
-    width: 90%;
-    margin: auto;
-  }
-  .home-search-form .btn-group:nth-child(2) .home-search-search-btn {
-    width: 100%;
-  }
-  .home-search-form .home-search-search-btn {
-    background-color: #f54838;
-    padding: 20px 30px;
-    border: transparent;
-    color: #fff;
-    border-radius: 0;
-    border-bottom-left-radius: 3px;
-    border-bottom-right-radius: 3px;
-    font-weight: bold;
-  }
-
-  #find_translators_container h2 {
-    margin-top: 50px;
-  }
-}
-@media (max-width: 860px) {
-  #help_container {
-    max-width: 100%;
-    padding: 124px 96px 60px 96px;
-  }
-  #help_container .help_left {
-    padding: 0 10px 20px;
-  }
-  #help_container .help_left .help_text_container p:nth-child(2) {
-    max-width: 100%;
-  }
-  #help_container img.img-fluid {
-    margin-right: -15%;
-    margin-top: 0;
-    max-width: 100%;
-  }
-}
-@media only screen and (max-width: 768px) {
-  .legal-work-img-wrap {
-    zoom: normal;
-  }
-
-  .legal-work {
-    padding: 25px 0 318px 0;
-  }
-
-  .content .profile .profile-section.practice-location-section input {
-    color: #241F2D;
-    padding: 8px 12px;
-    border: 1px solid #D6D5D7;
-    font-size: 14px;
-  }
-  .content .profile .profile-section.practice-location-section input[name="profile[country]"],
-.content .profile .profile-section.practice-location-section input[name="profile[state]"],
-.content .profile .profile-section.practice-location-section input[name="profile[city]"],
-.content .profile .profile-section.practice-location-section input[name="profile[address]"] {
-    border-radius: 4px;
-  }
-}
-@media only screen and (max-width: 480px) {
-  .legal-work {
-    padding: 25px 0 230px 0;
-  }
-
-  .legal-work-img-wrap .image-wrap .legal-work-img {
-    width: 100%;
-    padding-top: 25px;
-  }
-
-  .legal-work .legal-work-content .legal-work-text .legal-work-text-item {
-    font-size: 18px;
-  }
-
-  .goals-content .goals-block .goals-block-title {
-    font-size: 30px;
-  }
-
-  .goals-content .goals-bg .goals-block {
-    padding: 120px 40px 122px;
-  }
-
-  #help_container {
-    padding: 124px 30px 60px 30px;
-  }
-
-  .hedding_text_container {
-    padding-top: 100px;
-  }
-}
-@media only screen and (max-width: 432px) {
-  .legal-work .legal-work-content .legal-work-text .legal-work-text-item {
-    font-size: 14px;
-  }
-}
-@media only screen and (max-width: 360px) {
-  .legal-work .legal-work-content .legal-work-text .legal-work-text-item {
-    font-size: 13px;
-  }
-}
-
-/*# sourceMappingURL=last-changes.css.map */
+*{font-family:Metropolis,sans-serif}header .logo{margin-right:20% !important}header nav .black_menu .nav-item .nav-link.active{border-bottom:2px solid #f54838}header#header_white .nav-item .nav-link.active{border-bottom:2px solid #f54838}.sign-up .basic-form .custom-radios input[type=radio]#lawyer,.sign-up .basic-form .custom-radios input[type=radio]#lawyer{display:none}.pos-r{position:relative;top:32px}.home-search-form{border-radius:3px;display:flex;justify-content:space-between}.home-search-form .btn-group:nth-child(1){width:90%}.home-search-form .btn-group:nth-child(2){width:10%}.home-search-form .home-search-select-item{background:#fff;box-shadow:0 0 2px rgba(0,0,0,.2);border:1px solid #ccc;border-radius:0;padding:10.5px 16px 0;width:33.33333333%}.home-search-form .home-search-select-item .home-search-select-title{font-weight:500;font-size:12px;line-height:14px;color:#97959d;text-align:start}.home-search-form .home-search-select-item .dropdown-toggle,.home-search-form .home-search-select-item select{font-weight:500;font-size:15px;color:#000;width:100%;display:flex;justify-content:space-between;align-items:center;padding:0;padding-top:5px;border:none}.home-search-form .home-search-select-item .dropdown-toggle:focus,.home-search-form .home-search-select-item select:focus{box-shadow:none}.home-search-form .home-search-select-item .dropdown-menu{margin-left:-16px}.home-search-form .home-search-select-item .dropdown-menu.show{width:33.1%}.home-search-form .home-search-select-item .dropdown-menu .dropdown-items-wrap{display:flex;flex-direction:column}.home-search-form .home-search-select-item .dropdown-menu .dropdown-items-wrap a{color:#000}.home-search-form .home-search-search-btn{background-color:#f54838;padding:20px 30px;border:transparent;color:#fff;border-top-right-radius:3px;border-bottom-right-radius:3px;font-weight:bold}.legal-work{padding:65px 10px 110px 84px}.legal-work .legal-work-content .legal-work-title{font-family:Metropolis,sans-serif;font-style:normal;font-weight:bold;font-size:42px;text-transform:capitalize;color:#241f2d;padding-top:8px}.legal-work .legal-work-content .legal-work-text{padding-top:55px}.legal-work .legal-work-content .legal-work-text .legal-work-text-item{padding-top:29px;font-family:Metropolis,sans-serif;font-style:normal;font-weight:normal;font-size:22px;color:#000}.legal-work .legal-work-content .legal-work-text .legal-work-text-item img{width:30px;height:30px;margin-right:13px}.legal-work .legal-work-content .legal-work-btn{display:flex;flex-direction:column;padding:12px 20px;width:180px;height:44px;background:#f54838;border-radius:4px;text-decoration:none;font-family:Metropolis,sans-serif;font-style:normal;font-weight:600;font-size:15px;color:#fff;margin:0;margin-top:80px}.legal-work-img-wrap{position:relative}.legal-work-img-wrap .image-wrap{position:absolute}.legal-work-img-wrap .image-wrap .legal-work-img{width:100%}.translators_container_block_row:nth-child(1) .translators_block_rows:nth-child(1){border-top-left-radius:4px}.translators_container_block_row:nth-child(1) .translators_block_rows:nth-child(4){border-top-right-radius:4px}.translators_container_block_row:nth-child(2) .translators_block_rows:nth-child(1){border-bottom-left-radius:4px}.translators_container_block_row:nth-child(2) .translators_block_rows:nth-child(4){border-top-right-radius:4px}#translators_container_block{padding-top:0 !important;margin-top:40px !important}#help_container{padding:124px 0 60px 96px;margin-bottom:100px;max-width:80%}#help_container .help_left{padding-right:30px}#help_container .help_left .help_text_container p:nth-child(2){max-width:60%}#help_container img.img-fluid{align-self:center;margin-right:-15%;margin-top:-55px;max-width:100%}#header_background.about-header-bg{width:100%;background:url(../img/about-bg-t.png) no-repeat top;background-size:cover}#header_background.about-header-bg .about-header-icon{margin-top:153px;margin-bottom:15px}#header_background.about-header-bg .hedding_text_container h1{padding-top:0}#header_background.about-header-bg .hedding_text_container h3{padding-top:20px}.bg-color-t{background:linear-gradient(180deg, #F3F6FB 0%, #FFFFFF 100%) !important}.goals-content .goals-bg .abs{position:absolute;top:-140px;left:-262px;bottom:0;width:178%}.goals-content .goals-bg .abs img{width:100%}.goals-content .goals-bg .goals-block{padding:120px 50px 122px}.goals-content .goals-bg .goals-block .goals-block-item .goals-block-text ul li{list-style-type:disc}.per-hour-border{border:1px solid #ced4da;border-top-left-radius:4px;border-bottom-left-radius:4px}.per-hour-border option{font-size:14px !important}.per-hour-border .btn{color:#241f2d;font-size:14px;vertical-align:middle}.languages-select div,.languages-select select,.languages-select option{color:#241f2d;font-size:14px;vertical-align:middle}.languages-select select{padding:8px 12px}.how-it-works-top .how-it-works-head .how-it-works-tabs ul.nav-tabs{border-bottom:none}.how-it-works-top .how-it-works-head .how-it-works-tabs ul li:nth-child(1){border-radius:4px 0 0 4px}.how-it-works-top .how-it-works-head .how-it-works-tabs ul li:nth-child(1) a.tab-button{border-radius:4px 0 0 4px}.how-it-works-top .how-it-works-head .how-it-works-tabs ul li:nth-child(2){border-radius:0 4px 4px 0;border-color:#8a2be2 !important}.how-it-works-top .how-it-works-head .how-it-works-tabs ul li:nth-child(2) a.tab-button{border-radius:0 4px 4px 0}.how-it-works-top .tab-body .bg-5{background-image:url("../img/5.svg");background-repeat:no-repeat;margin-top:200px}@media only screen and (max-width: 1284px){.goals-content .goals-bg .abs{width:188%}}@media only screen and (max-width: 1200px){#help_container img.img-fluid{max-width:60%}.goals-content .goals-bg .abs{width:192%}}@media only screen and (max-width: 1120px){header .logo{margin-right:15% !important}.goals-content .goals-bg .abs{width:202%}}@media only screen and (max-width: 1056px){header .logo{margin-right:9% !important}}@media only screen and (max-width: 993px){header .logo{margin-right:9% !important}header #header_white .nav-item .nav-link.active{width:130px}#help_container img.img-fluid{max-width:55%}.goals-content .goals-bg .abs{display:none}.sm-center{margin:auto}.home-search-form{flex-wrap:wrap;flex-direction:column;justify-content:center}.home-search-form .btn-group:nth-child(1){width:90%;display:flex;flex-direction:column;margin:auto}.home-search-form .btn-group:nth-child(1) .home-search-select-item{width:100%}.home-search-form .btn-group:nth-child(2){width:90%;margin:auto}.home-search-form .btn-group:nth-child(2) .home-search-search-btn{width:100%}.home-search-form .home-search-search-btn{background-color:#f54838;padding:20px 30px;border:transparent;color:#fff;border-radius:0;border-bottom-left-radius:3px;border-bottom-right-radius:3px;font-weight:bold}#find_translators_container h2{margin-top:50px}}@media(max-width: 860px){#help_container{max-width:100%;padding:124px 96px 60px 96px}#help_container .help_left{padding:0 10px 20px}#help_container .help_left .help_text_container p:nth-child(2){max-width:100%}#help_container img.img-fluid{margin-right:-15%;margin-top:0;max-width:100%}}@media only screen and (max-width: 768px){.legal-work-img-wrap{zoom:normal}.legal-work{padding:25px 0 318px 0}.content .profile .profile-section.practice-location-section input{color:#241f2d;padding:8px 12px;border:1px solid #d6d5d7;font-size:14px}.content .profile .profile-section.practice-location-section input[name="profile[country]"],.content .profile .profile-section.practice-location-section input[name="profile[state]"],.content .profile .profile-section.practice-location-section input[name="profile[city]"],.content .profile .profile-section.practice-location-section input[name="profile[address]"]{border-radius:4px}}@media only screen and (max-width: 480px){.legal-work{padding:25px 0 230px 0}.legal-work-img-wrap .image-wrap .legal-work-img{width:100%;padding-top:25px}.legal-work .legal-work-content .legal-work-text .legal-work-text-item{font-size:18px}.goals-content .goals-block .goals-block-title{font-size:30px}.goals-content .goals-bg .goals-block{padding:120px 40px 122px}#help_container{padding:124px 30px 60px 30px}.hedding_text_container{padding-top:100px}}@media only screen and (max-width: 432px){.legal-work .legal-work-content .legal-work-text .legal-work-text-item{font-size:14px}}@media only screen and (max-width: 360px){.legal-work .legal-work-content .legal-work-text .legal-work-text-item{font-size:13px}}/*# sourceMappingURL=last-changes.css.map */
