--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -1,1 +1,240 @@
-@import"https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/fontawesome.min.css";@font-face{font-family:"Metropolis";src:url("fonts/Metropolis/Metropolis-Regular.eot");src:url("fonts/Metropolis/Metropolis-Regular.eot?#iefix") format("embedded-opentype"),url("fonts/Metropolis/Metropolis-Regular.otf") format("otf"),url("fonts/Metropolis/Metropolis-Regular.woff2") format("woff2"),url("fonts/Metropolis/Metropolis-Regular.woff") format("woff"),url("fonts/Metropolis/Metropolis-Regular.ttf") format("truetype"),url("fonts/Metropolis/Metropolis-Regular.svg#Metropolis") format("svg")}.title-blog{font-weight:600;font-size:34px;color:#000;margin-bottom:30px;text-align:start}.blog-item{margin:30px auto 0;border-bottom:1px solid #e6e6e6;padding-bottom:30px;justify-content:space-between}.blog-item .blog-item-content .blog-item-type{font-weight:500;font-size:12px;text-transform:uppercase;color:#666;margin-bottom:12px}.blog-item .blog-item-content .blog-item-title{font-weight:600;font-size:24px;color:#000;margin-bottom:16px}.blog-item .blog-item-content .blog-item-text{font-weight:normal;font-size:15px;color:#000;max-width:500px;padding-bottom:18px}.blog-item .blog-item-content .read-more-btn{background-color:#f54838;padding:16px 48px;border:transparent;color:#fff;font-size:16px;border-radius:3px}.blog-item .blog-item-img img{max-width:400px}.blog-single-item{border-bottom:1px solid #e6e6e6;max-width:792px;margin:auto}.blog-single-item .blog-single-item-content{padding-bottom:46px}.blog-single-item .blog-single-item-content .blog-single-item-big-title{font-size:34px;font-weight:600;color:#000;margin-top:30px;margin-bottom:20px}.blog-single-item .blog-single-item-content .blog-single-item-info{margin-bottom:8px}.blog-single-item .blog-single-item-content .blog-single-item-info .blog-single-item-info-left .blog-single-item-avatar{width:36px;height:36px;margin-right:12px}.blog-single-item .blog-single-item-content .blog-single-item-info .blog-single-item-info-left .blog-single-item-name{font-weight:500;font-size:15px;color:#000;margin:10px}.blog-single-item .blog-single-item-content .blog-single-item-info .blog-single-item-info-left .blog-single-item-date{font-weight:normal;font-size:14px;line-height:20px;color:#777}.blog-single-item .blog-single-item-content .blog-single-item-info .blog-single-item-info-right .blog-single-item-share{text-decoration:none;font-weight:500;font-size:15px;color:#666}.blog-single-item .blog-single-item-content .blog-single-item-info .blog-single-item-info-right .blog-single-item-share:before{content:url("../img/share-btn.png");margin-right:12px;width:12px;height:12px;vertical-align:middle}.blog-single-item .blog-single-item-content .blog-single-item-img{max-width:792px;margin:40px auto}.blog-single-item .blog-single-item-content .blog-single-item-img img{width:100%}.blog-single-item .blog-single-item-content .parent-text h1,.blog-single-item .blog-single-item-content .parent-text h2,.blog-single-item .blog-single-item-content .parent-text h3,.blog-single-item .blog-single-item-content .parent-text h4,.blog-single-item .blog-single-item-content .parent-text h5,.blog-single-item .blog-single-item-content .parent-text h6{font-style:normal;font-weight:600;color:#000;margin-top:50px;margin-bottom:40px}.blog-single-item .blog-single-item-content .parent-text p{font-style:normal;font-weight:normal;font-size:15px;color:#000}.blog-single-item .blog-single-item-content .blog-single-item-tags a{font-weight:normal;font-size:13px;line-height:16px;color:#000;border:1px solid #e6e6e6;border-radius:3px;padding:5px;text-decoration:none}.more-posts-block{max-width:792px;margin:auto;margin-top:10px}.more-posts-block .more-posts-block-title{font-weight:600;font-size:28px;margin-top:30px;margin-bottom:30px;color:#000}.more-posts-block .more-posts-item{max-width:376px}.more-posts-block .more-posts-item .more-posts-item-img{width:100%}.more-posts-block .more-posts-item a .more-posts-item-title{font-style:normal;font-weight:600;font-size:24px;color:#000;padding-top:20px;padding-bottom:16px}.more-posts-block .more-posts-item .more-posts-item-text{font-style:normal;font-weight:normal;font-size:15px;color:#000;padding-bottom:18px}@media only screen and (max-width: 993px){.blog-item{border-bottom:transparent;align-items:center;margin-bottom:30px;flex-direction:column-reverse;justify-content:center}.blog-item .blog-item-content .blog-item-title{max-width:320px}.blog-item .blog-item-content .blog-item-text{max-width:400px}.blog-item .blog-item-content .read-more-btn{margin-top:20px;margin-bottom:20px}.blog-item .blog-item-img{max-width:400px;margin-bottom:12px}.blog-item .blog-item-img img{width:100%}}@media only screen and (max-width: 576px){.blog-item{align-items:center;flex-direction:column-reverse}.blog-item .blog-item-content .blog-item-title{max-width:320px}.blog-item .blog-item-content .blog-item-text{max-width:400px}.blog-item .blog-item-img{max-width:400px}.blog-item .blog-item-img img{width:100%}.blog-single-item{max-width:540px;padding:0 20px}}@media only screen and (max-width: 480px){.blog-item{align-items:center;flex-direction:column-reverse}.blog-item .blog-item-content .blog-item-title{max-width:300px}.blog-item .blog-item-content .blog-item-text{max-width:340px}.blog-item .blog-item-img{max-width:340px}.blog-item .blog-item-img img{width:100%}.blog-single-item-info-right{margin-top:12px}}/*# sourceMappingURL=blog.css.map */
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/fontawesome.min.css");
+@font-face {
+  font-family: "Metropolis";
+  src: url("fonts/Metropolis/Metropolis-Regular.eot");
+  /* IE9*/
+  src: url("fonts/Metropolis/Metropolis-Regular.eot?#iefix") format("embedded-opentype"), url("fonts/Metropolis/Metropolis-Regular.otf") format("otf"), url("fonts/Metropolis/Metropolis-Regular.woff2") format("woff2"), url("fonts/Metropolis/Metropolis-Regular.woff") format("woff"), url("fonts/Metropolis/Metropolis-Regular.ttf") format("truetype"), url("fonts/Metropolis/Metropolis-Regular.svg#Metropolis") format("svg");
+  /* iOS 4.1- */
+}
+.title-blog {
+  font-weight: 600;
+  font-size: 34px;
+  color: #000000;
+  margin-bottom: 30px;
+  text-align: start;
+}
+
+.blog-item {
+  margin: 30px auto 0;
+  border-bottom: 1px solid #E6E6E6;
+  padding-bottom: 30px;
+  justify-content: space-between;
+}
+.blog-item .blog-item-content .blog-item-type {
+  font-weight: 500;
+  font-size: 12px;
+  text-transform: uppercase;
+  color: #666666;
+  margin-bottom: 12px;
+}
+.blog-item .blog-item-content .blog-item-title {
+  font-weight: 600;
+  font-size: 24px;
+  color: #000000;
+  margin-bottom: 16px;
+}
+.blog-item .blog-item-content .blog-item-text {
+  font-weight: normal;
+  font-size: 15px;
+  color: #000000;
+  max-width: 500px;
+  padding-bottom: 18px;
+}
+.blog-item .blog-item-content .read-more-btn {
+  background-color: #F54838;
+  padding: 16px 48px;
+  border: transparent;
+  color: #fff;
+  font-size: 16px;
+  border-radius: 3px;
+}
+.blog-item .blog-item-img img {
+  max-width: 400px;
+}
+
+.blog-single-item {
+  border-bottom: 1px solid #E6E6E6;
+  max-width: 792px;
+  margin: auto;
+}
+.blog-single-item .blog-single-item-content {
+  padding-bottom: 46px;
+}
+.blog-single-item .blog-single-item-content .blog-single-item-big-title {
+  font-size: 34px;
+  font-weight: 600;
+  color: #000000;
+  margin-top: 30px;
+  margin-bottom: 20px;
+}
+.blog-single-item .blog-single-item-content .blog-single-item-info {
+  margin-bottom: 8px;
+}
+.blog-single-item .blog-single-item-content .blog-single-item-info .blog-single-item-info-left .blog-single-item-avatar {
+  width: 36px;
+  height: 36px;
+  margin-right: 12px;
+}
+.blog-single-item .blog-single-item-content .blog-single-item-info .blog-single-item-info-left .blog-single-item-name {
+  font-weight: 500;
+  font-size: 15px;
+  color: #000000;
+  margin: 10px;
+}
+.blog-single-item .blog-single-item-content .blog-single-item-info .blog-single-item-info-left .blog-single-item-date {
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 20px;
+  color: #777777;
+}
+.blog-single-item .blog-single-item-content .blog-single-item-info .blog-single-item-info-right .blog-single-item-share {
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 15px;
+  color: #666666;
+}
+.blog-single-item .blog-single-item-content .blog-single-item-info .blog-single-item-info-right .blog-single-item-share:before {
+  content: url("../img/share-btn.png");
+  margin-right: 12px;
+  width: 12px;
+  height: 12px;
+  vertical-align: middle;
+}
+.blog-single-item .blog-single-item-content .blog-single-item-img {
+  max-width: 792px;
+  margin: 40px auto;
+}
+.blog-single-item .blog-single-item-content .blog-single-item-img img {
+  width: 100%;
+}
+.blog-single-item .blog-single-item-content .parent-text h1, .blog-single-item .blog-single-item-content .parent-text h2, .blog-single-item .blog-single-item-content .parent-text h3, .blog-single-item .blog-single-item-content .parent-text h4, .blog-single-item .blog-single-item-content .parent-text h5, .blog-single-item .blog-single-item-content .parent-text h6 {
+  font-style: normal;
+  font-weight: 600;
+  color: #000000;
+  margin-top: 50px;
+  margin-bottom: 40px;
+}
+.blog-single-item .blog-single-item-content .parent-text p {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 15px;
+  color: #000000;
+}
+.blog-single-item .blog-single-item-content .blog-single-item-tags a {
+  font-weight: normal;
+  font-size: 13px;
+  line-height: 16px;
+  color: #000000;
+  border: 1px solid #E6E6E6;
+  border-radius: 3px;
+  padding: 5px;
+  text-decoration: none;
+}
+
+.more-posts-block {
+  max-width: 792px;
+  margin: auto;
+  margin-top: 10px;
+}
+.more-posts-block .more-posts-block-title {
+  font-weight: 600;
+  font-size: 28px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  color: #000;
+}
+.more-posts-block .more-posts-item {
+  max-width: 376px;
+}
+.more-posts-block .more-posts-item .more-posts-item-img {
+  width: 100%;
+}
+.more-posts-block .more-posts-item a .more-posts-item-title {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 24px;
+  color: #000000;
+  padding-top: 20px;
+  padding-bottom: 16px;
+}
+.more-posts-block .more-posts-item .more-posts-item-text {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 15px;
+  color: #000;
+  padding-bottom: 18px;
+}
+
+@media only screen and (max-width: 993px) {
+  .blog-item {
+    border-bottom: transparent;
+    align-items: center;
+    margin-bottom: 30px;
+    flex-direction: column-reverse;
+    justify-content: center;
+  }
+  .blog-item .blog-item-content .blog-item-title {
+    max-width: 320px;
+  }
+  .blog-item .blog-item-content .blog-item-text {
+    max-width: 400px;
+  }
+  .blog-item .blog-item-content .read-more-btn {
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+  .blog-item .blog-item-img {
+    max-width: 400px;
+    margin-bottom: 12px;
+  }
+  .blog-item .blog-item-img img {
+    width: 100%;
+  }
+}
+@media only screen and (max-width: 576px) {
+  .blog-item {
+    align-items: center;
+    flex-direction: column-reverse;
+  }
+  .blog-item .blog-item-content .blog-item-title {
+    max-width: 320px;
+  }
+  .blog-item .blog-item-content .blog-item-text {
+    max-width: 400px;
+  }
+  .blog-item .blog-item-img {
+    max-width: 400px;
+  }
+  .blog-item .blog-item-img img {
+    width: 100%;
+  }
+
+  .blog-single-item {
+    max-width: 540px;
+    padding: 0 20px;
+  }
+}
+@media only screen and (max-width: 480px) {
+  .blog-item {
+    align-items: center;
+    flex-direction: column-reverse;
+  }
+  .blog-item .blog-item-content .blog-item-title {
+    max-width: 300px;
+  }
+  .blog-item .blog-item-content .blog-item-text {
+    max-width: 340px;
+  }
+  .blog-item .blog-item-img {
+    max-width: 340px;
+  }
+  .blog-item .blog-item-img img {
+    width: 100%;
+  }
+
+  .blog-single-item-info-right {
+    margin-top: 12px;
+  }
+}
+
+/*# sourceMappingURL=blog.css.map */
