--- a/public/css/our_lawyers.css
+++ b/public/css/our_lawyers.css
@@ -1,200 +1,1 @@
-@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/fontawesome.min.css");
-@font-face {
-  font-family: "Metropolis";
-  src: url("fonts/Metropolis/Metropolis-Regular.eot");
-  /* IE9*/
-  src: url("fonts/Metropolis/Metropolis-Regular.eot?#iefix") format("embedded-opentype"), url("fonts/Metropolis/Metropolis-Regular.otf") format("otf"), url("fonts/Metropolis/Metropolis-Regular.woff2") format("woff2"), url("fonts/Metropolis/Metropolis-Regular.woff") format("woff"), url("fonts/Metropolis/Metropolis-Regular.ttf") format("truetype"), url("fonts/Metropolis/Metropolis-Regular.svg#Metropolis") format("svg");
-  /* iOS 4.1- */
-}
-.badge-purple {
-  background: #5F47B3;
-}
-
-.w-10 {
-  width: 10%;
-}
-
-.w-70 {
-  width: 70%;
-}
-
-.w-20 {
-  width: 20%;
-}
-
-.reset-filters-block {
-  display: flex;
-  align-items: center;
-}
-.reset-filters-block a {
-  text-decoration: none;
-  font-weight: 500;
-  font-size: 14px;
-  color: #76747D;
-  vertical-align: middle;
-  padding-left: 12px;
-  padding-right: 14px;
-}
-.reset-filters-block a:hover {
-  text-decoration: underline;
-}
-
-.found-result {
-  font-weight: 500;
-  font-size: 14px;
-  color: #76747D;
-}
-
-.card .card-body .card-col.card-img-wrap {
-  width: 80px;
-  height: 80px;
-  margin-right: 20px;
-}
-.card .card-body .card-col.card-img-wrap .card-img {
-  width: 100%;
-}
-.card .card-body .card-col .btn-group {
-  min-width: 150px;
-}
-.card .card-body .card-col .btn-group .quote-btn {
-  padding: 8px 14px;
-  margin-bottom: 8px;
-  background: #F54838;
-  border-radius: 4px;
-  border: none;
-  color: #fff;
-  width: 100%;
-  height: 40px;
-  vertical-align: middle;
-}
-.card .card-body .card-col .btn-group .share-btn {
-  padding: 8px 14px;
-  background: #F5F5F5;
-  border-radius: 4px;
-  border: none;
-  color: #76747D;
-  width: 100%;
-  height: 40px;
-  vertical-align: middle;
-}
-.card .card-body .card-col .btn-group .share-btn i {
-  margin-right: 8px;
-}
-.card .card-body .card-col .card-row:nth-child(1) {
-  margin-bottom: 12px;
-}
-.card .card-body .card-col .card-row:nth-child(2) {
-  margin-bottom: 12px;
-}
-.card .card-body .card-col .card-row .card-title {
-  font-weight: 500;
-  font-size: 18px;
-  color: #241F2D;
-  margin-right: 10px;
-  margin-bottom: 0;
-}
-.card .card-body .card-col .card-row .status {
-  margin-right: 10px;
-}
-.card .card-body .card-col .card-row .status .badge-purple {
-  font-weight: 600;
-  font-size: 12px;
-  line-height: 12px;
-  color: #FFFFFF;
-  padding: 3px 5px;
-}
-.card .card-body .card-col .card-row .reviews-counnt-block {
-  margin-right: 12px;
-}
-.card .card-body .card-col .card-row .reviews-counnt-block i {
-  color: #FCC12C;
-  margin-right: 8px;
-}
-.card .card-body .card-col .card-row .reviews-counnt-block h6.h6 {
-  font-weight: 600;
-  font-size: 14px;
-  line-height: 18px;
-  color: #241F2D;
-  margin-right: 8px;
-  margin-bottom: 0;
-}
-.card .card-body .card-col .card-row .reviews-counnt-block .reviews-count {
-  font-weight: 500;
-  font-size: 14px;
-  color: #76747D;
-}
-.card .card-body .card-col .card-row .reviews-counnt-block .dot {
-  font-weight: 500;
-  font-size: 14px;
-  color: #76747D;
-  padding-left: 10px;
-}
-.card .card-body .card-col .card-row .price-block {
-  margin-right: 12px;
-}
-.card .card-body .card-col .card-row .price-block h6.h6 {
-  font-weight: 600;
-  font-size: 14px;
-  color: #241F2D;
-  margin-right: 8px;
-  margin-bottom: 0;
-  padding-bottom: 0;
-}
-.card .card-body .card-col .card-row .price-block .slash, .card .card-body .card-col .card-row .price-block .time {
-  font-weight: 500;
-  font-size: 14px;
-  color: #76747D;
-}
-.card .card-body .card-col .card-row .price-block .dot {
-  font-weight: 500;
-  font-size: 14px;
-  color: #76747D;
-  padding-left: 10px;
-}
-.card .card-body .card-col .card-row .location-block {
-  font-weight: 500;
-  font-size: 14px;
-  color: #76747D;
-}
-.card .card-body .card-col .card-row .location-block i {
-  font-size: 18px;
-  margin-bottom: 10px;
-}
-.card .card-body .card-col .card-row .location-block i, .card .card-body .card-col .card-row .location-block span {
-  margin-right: 8px;
-}
-.card .card-body .card-col .card-row .lang-block,
-.card .card-body .card-col .card-row .spec-block {
-  margin-bottom: 4px;
-  font-weight: 600;
-  font-size: 13px;
-  line-height: 18px;
-  text-decoration-line: underline;
-  color: #241F2D;
-}
-.card .card-body .card-col .card-row .lang-block .title,
-.card .card-body .card-col .card-row .spec-block .title {
-  font-weight: 500;
-  font-size: 14px;
-  padding-right: 4px;
-  color: #76747D;
-  text-decoration-line: none;
-}
-.card .card-body .card-col .card-row .card-text.lawyer-text {
-  max-width: 640px;
-  margin-right: 50px;
-  margin-top: 24px;
-  font-weight: normal;
-  font-size: 14px;
-  color: #241F2D;
-}
-@media only screen and (max-width: 993px) {
-  .card .card-body .card-col .card-row:nth-child(2) {
-    flex-direction: column;
-  }
-  .card .card-body .card-col .card-row:nth-child(2) div {
-    margin-bottom: 12px;
-  }
-}
-
-/*# sourceMappingURL=our_lawyers.css.map */
+@import"https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/fontawesome.min.css";@font-face{font-family:"Metropolis";src:url("fonts/Metropolis/Metropolis-Regular.eot");src:url("fonts/Metropolis/Metropolis-Regular.eot?#iefix") format("embedded-opentype"),url("fonts/Metropolis/Metropolis-Regular.otf") format("otf"),url("fonts/Metropolis/Metropolis-Regular.woff2") format("woff2"),url("fonts/Metropolis/Metropolis-Regular.woff") format("woff"),url("fonts/Metropolis/Metropolis-Regular.ttf") format("truetype"),url("fonts/Metropolis/Metropolis-Regular.svg#Metropolis") format("svg")}.badge-purple{background:#5f47b3}.w-10{width:10%}.w-70{width:70%}.w-20{width:20%}.reset-filters-block{display:flex;align-items:center}.reset-filters-block a{text-decoration:none;font-weight:500;font-size:14px;color:#76747d;vertical-align:middle;padding-left:12px;padding-right:14px}.reset-filters-block a:hover{text-decoration:underline}.found-result{font-weight:500;font-size:14px;color:#76747d}.card .card-body .card-col.card-img-wrap{width:80px;height:80px;margin-right:20px}.card .card-body .card-col.card-img-wrap .card-img{width:100%}.card .card-body .card-col .btn-group{min-width:150px}.card .card-body .card-col .btn-group .quote-btn{padding:8px 14px;margin-bottom:8px;background:#f54838;border-radius:4px;border:none;color:#fff;width:100%;height:40px;vertical-align:middle}.card .card-body .card-col .btn-group .share-btn{padding:8px 14px;background:#f5f5f5;border-radius:4px;border:none;color:#76747d;width:100%;height:40px;vertical-align:middle}.card .card-body .card-col .btn-group .share-btn i{margin-right:8px}.card .card-body .card-col .card-row:nth-child(1){margin-bottom:12px}.card .card-body .card-col .card-row:nth-child(2){margin-bottom:12px}.card .card-body .card-col .card-row .card-title{font-weight:500;font-size:18px;color:#241f2d;margin-right:10px;margin-bottom:0}.card .card-body .card-col .card-row .status{margin-right:10px}.card .card-body .card-col .card-row .status .badge-purple{font-weight:600;font-size:12px;line-height:12px;color:#fff;padding:3px 5px}.card .card-body .card-col .card-row .reviews-counnt-block{margin-right:12px}.card .card-body .card-col .card-row .reviews-counnt-block i{color:#fcc12c;margin-right:8px}.card .card-body .card-col .card-row .reviews-counnt-block h6.h6{font-weight:600;font-size:14px;line-height:18px;color:#241f2d;margin-right:8px;margin-bottom:0}.card .card-body .card-col .card-row .reviews-counnt-block .reviews-count{font-weight:500;font-size:14px;color:#76747d}.card .card-body .card-col .card-row .reviews-counnt-block .dot{font-weight:500;font-size:14px;color:#76747d;padding-left:10px}.card .card-body .card-col .card-row .price-block{margin-right:12px}.card .card-body .card-col .card-row .price-block h6.h6{font-weight:600;font-size:14px;color:#241f2d;margin-right:8px;margin-bottom:0;padding-bottom:0}.card .card-body .card-col .card-row .price-block .slash,.card .card-body .card-col .card-row .price-block .time{font-weight:500;font-size:14px;color:#76747d}.card .card-body .card-col .card-row .price-block .dot{font-weight:500;font-size:14px;color:#76747d;padding-left:10px}.card .card-body .card-col .card-row .location-block{font-weight:500;font-size:14px;color:#76747d}.card .card-body .card-col .card-row .location-block i{font-size:18px;margin-bottom:10px}.card .card-body .card-col .card-row .location-block i,.card .card-body .card-col .card-row .location-block span{margin-right:8px}.card .card-body .card-col .card-row .lang-block,.card .card-body .card-col .card-row .spec-block{margin-bottom:4px;font-weight:600;font-size:13px;line-height:18px;text-decoration-line:underline;color:#241f2d}.card .card-body .card-col .card-row .lang-block .title,.card .card-body .card-col .card-row .spec-block .title{font-weight:500;font-size:14px;padding-right:4px;color:#76747d;text-decoration-line:none}.card .card-body .card-col .card-row .card-text.lawyer-text{max-width:640px;margin-right:50px;margin-top:24px;font-weight:normal;font-size:14px;color:#241f2d}@media only screen and (max-width: 993px){.card .card-body .card-col .card-row:nth-child(2){flex-direction:column}.card .card-body .card-col .card-row:nth-child(2) div{margin-bottom:12px}}/*# sourceMappingURL=our_lawyers.css.map */
